# garagem

./: db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py
garagem/: admin.py  models.py  serializers.py
garagem/migrations/: 0001_initial.py  0002_marca_ano_fundacao.py  0003_categoria.py  0004_autor.py  0005_livro.py  0006_delete_autor_delete_livro.py  0007_acessório.py  0008_cor.py  0009_veiculo.py  0010_veiculo_preco.py  0011_veiculo_nome.py  0012_rename_nome_veiculo_descricao.py  0013_rename_ano_fundacao_marca_ano.py  0014_veiculo_ano.py
